fix alignment

--- a/music-player/src/components/musicplayer/MusicPlayer.module.css
+++ b/music-player/src/components/musicplayer/MusicPlayer.module.css
@@ -34,7 +34,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: .5rem;
-    margin-bottom: .5rem;
 }
 
 .leftsection,
